Improved Layout of Head-Items (headline, email and scrolldown button) // Avoid jumping of projects  by hover

--- a/src/app/headline/headline.scss
+++ b/src/app/headline/headline.scss
@@ -1,12 +1,34 @@
 @use '../../styles.scss' as *;
 
+.headContainer{
+  display: flex;
+  width: 100%;
+  height: calc(100vh - 130px);
+  margin-top: 80px;
+  max-height:100vh;
+  justify-content: space-between;
+  flex-direction:column;
+  align-items: center;
+  position: relative;
+  box-sizing: border-box;
+  padding: 20px;
+  @media (max-height:400px) and (min-width:600px){
+    padding:0;
+    .headline h1{
+      font-size:3rem !important;
+    }
+  }
+}
+
+
+
 .headline {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
-  height: 100%;
+  height:calc(100% - 280px);
   gap: 20px;
 }
 
@@ -27,5 +49,93 @@ div.subline {
   div {
     height: 2px;
     background-color: var(--main-font-color);
+  }
+}
+
+.dividerHome {
+  width: 100%;
+  display: flex !important;
+  justify-content: space-between;
+  align-items: end;
+  position: relative;
+  bottom:0;
+  padding:10px;
+  box-sizing: border-box;
+  @media (max-width:600px){
+    width:100vw;
+  }
+  @media(max-height:400px) and (min-width:600px){
+    padding:0;
+  }
+  @media(min-width:1000px){
+    width:1000px;
+  } 
+}
+.vertEmail {
+
+  filter: brightness(0.3);
+  cursor: pointer;
+  position: relative;
+  left: 20px;
+  width: 1.2rem;
+
+}
+.scrollDown {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  width: 65px;
+right:0;
+  position: relative;
+  cursor: pointer;
+  > p {
+    margin-bottom:5px;
+    text-align: center;
+  }
+  img {
+    height: 40px;
+  }
+}
+
+.scrollDownArrow {
+  position: relative;
+  height: 100px;
+  width: 64.4px;
+  .arrow {
+    background-color: var(--main-bg-color);
+    opacity: 0;
+    position: absolute;
+    inset: 0;
+    width: 64.4px;
+    height: 100px;
+    animation: seq 1.5s steps(5, end) infinite;
+  }
+  .arrow:nth-child(1) {
+    animation-delay: 0s;
+  }
+  .arrow:nth-child(2) {
+    animation-delay: 0.3s;
+  }
+  .arrow:nth-child(3) {
+    animation-delay: 0.6s;
+  }
+  .arrow:nth-child(4) {
+    animation-delay: 0.9s;
+  }
+  .arrow:nth-child(5) {
+    animation-delay: 1.2s;
+  }
+}
+
+@keyframes seq {
+  0% {
+    opacity: 1;
+  } /* sichtbar (vorwärts) */
+  25% {
+    opacity: 0;
+  } /* ab jetzt unsichtbar */
+  100% {
+    opacity: 0;
   }
 }
